tests/baselines/reference/recursiveNamedLambdaCall.errors.txt
==== tests/cases/compiler/recursiveNamedLambdaCall.ts (5 errors) ====
    var promise = function( obj ) {
        
            if ( top && top.doScroll ) {
           ~~~
!!! error TS2095: Could not find symbol 'top'.
                  ~~~
!!! error TS2095: Could not find symbol 'top'.
                (function doScrollCheck() {
                    if ( false ) {
    
                        try {
                            top.doScroll("left");
          ~~~
!!! error TS2095: Could not find symbol 'top'.
                        } catch(e) {
                            return setTimeout( doScrollCheck, 50 );
                 ~~~~~~~~~~
!!! error TS2095: Could not find symbol 'setTimeout'.
                        }
    
                        // detach all dom ready events
                        detach();
         ~~~~~~
!!! error TS2095: Could not find symbol 'detach'.
    
                    }
                })();
            }
    };